fixed the layout bug

--- a/frontend/src/css/LandingPage.css
+++ b/frontend/src/css/LandingPage.css
@@ -19,7 +19,7 @@
 
 .vignette-wrapper {
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     justify-content: center; 
     align-items: center;
